libs/@local/hashql/ast/tests/ui/lower/expander/special-form-expander/newtype-collect-all-errors.jsonc
//@ run: fail
//@ description: We should collect all errors when lowering newtype/3, and not only report the first one.
["::kernel::special_form::newtype", "::x", { "#literal": 1 }, "x"]
//~^ ERROR expected a type name for the `newtype` binding
//~| ERROR cannot use a literal value as a type
//~| ERROR cannot find value `x` in this scope
